--- a/index.html
+++ b/index.html
@@ -502,8 +502,8 @@
                 <h2 class="category-title">تعاويذ العلاج</h2>
             </div>
             <div class="spells-grid">
-                <div class="spell-card" onclick="copySpellName('Episkey')">
-                    <div class="spell-name">Episkey</div>
+                <div class="spell-card" onclick="copySpellName('Episky')">
+                    <div class="spell-name">Episky</div>
                     <span class="spell-cost">تكلفة: 0 MP</span>
                     <ul class="spell-effects">
                         <li>يعالج 10 HP</li>
@@ -694,3 +694,4 @@
 </body>
 
 </html>
+
