--- a/index.html
+++ b/index.html
@@ -328,8 +328,8 @@
                 <h2 class="category-title">تعاويذ الهجوم</h2>
             </div>
             <div class="spells-grid">
-                <div class="spell-card" onclick="copySpellName('Expelliarmus')">
-                    <div class="spell-name">Expelliarmus</div>
+                <div class="spell-card" onclick="copySpellName('Expelruamus')">
+                    <div class="spell-name">Expelruamus</div>
                     <span class="spell-cost">تكلفة: 10 MP</span>
                     <ul class="spell-effects">
                         <li>يلغي التأثيرات الدفاعية</li>
@@ -694,4 +694,5 @@
 </body>
 
 </html>
+
 
